chore: Linked static fils in base and index.html

--- a/E_commerce/templates/base.html
+++ b/E_commerce/templates/base.html
@@ -116,16 +116,15 @@
                 Shop
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="cart.html">Shop Cart</a></li>
-                <li><a class="dropdown-item" href="wishlist.html">Wishlist</a></li>
-                <li><a class="dropdown-item" href="product-details.html">Product Details</a></li>
-                <li><a class="dropdown-item" href="payment-method.html">Payment Method</a></li>
-                <li><a class="dropdown-item" href="billing-details.html">Billing Details</a></li>
-                <li><a class="dropdown-item" href="address.html">Addresses</a></li>
-                <li><a class="dropdown-item" href="shop-grid.html">Shop Grid</a></li>
-                <li><a class="dropdown-item" href="shop-grid-type-4.html">Shop Grid 4</a></li>
-                <li><a class="dropdown-item" href="shop-grid-type-5.html">Shop Grid 5</a></li>
-                <li><a class="dropdown-item" href="search.html">Search</a></li>
+                <li><a class="dropdown-item" href="{%url 'cart' %}">Shop Cart</a></li>
+                <li><a class="dropdown-item" href="{%url 'wishlist' %}">Wishlist</a></li>
+                <li><a class="dropdown-item" href="{%url 'payment_method' %}">Payment Method</a></li>
+                <li><a class="dropdown-item" href="{%url 'billing_details' %}">Billing Details</a></li>
+                <li><a class="dropdown-item" href="{%url 'address' %}">Addresses</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid' %}">Shop Grid</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid_type_4' %}">Shop Grid 4</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid_type_5'%}">Shop Grid 5</a></li>
+                <li><a class="dropdown-item" href="{%url 'search' %}">Search</a></li>
               </ul>
             </li>
             <li class="nav-item">
