--- a/E_commerce/templates/index.html
+++ b/E_commerce/templates/index.html
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="text-center pb-3">
           <h3 class="mb-0 h3 fw-bold">Featured Products</h3>
-          <p class="mb-0 text-capitalize">The purpose of lorem ipsum</p>
+          <p class="mb-0 text-capitalize">Shop with KassyandI</p>
         </div>
         <div class="product-thumbs">
           <div class="card">
@@ -976,7 +976,7 @@
                       <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
                     </div>
                     <a href="product-details.html">
-                      <img src="assets/images/special-offer/03.webp" class="card-img-top" alt="...">
+                      <img src="{%static 'assets/images/special-offer/03.webp' %}" alt="class="card-img-top" alt="...">
                     </a>
                   </div>
                   <div class="card-body">
@@ -1003,7 +1003,7 @@
                       <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
                     </div>
                     <a href="product-details.html">
-                      <img src="assets/images/special-offer/04.webp" class="card-img-top" alt="...">
+                      <img src="{%static 'assets/images/special-offer/04.webp' %}" class="card-img-top" alt="...">
                     </a>
                   </div>
                   <div class="card-body">
@@ -1030,7 +1030,7 @@
                       <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
                     </div>
                     <a href="product-details.html">
-                      <img src="assets/images/special-offer/05.webp" class="card-img-top" alt="...">
+                      <img src="{%static 'assets/images/special-offer/05.webp' %}" class="card-img-top" alt="...">
                     </a>
                   </div>
                   <div class="card-body">
@@ -1121,7 +1121,7 @@
         <div class="card border-0 rounded-0 p-3 depth">
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
-              <img src="assets/images/extra-images/promo-large.webp" class="img-fluid rounded-0" alt="...">
+              <img src="{%static 'assets/images/extra-images/promo-large.webp' %}" class="img-fluid rounded-0" alt="...">
             </div>
             <div class="col-lg-6">
               <div class="card-body">
@@ -1162,7 +1162,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/01.webp" class="img-fluid" alt="">
+                    <img src="{%static 'assets/images/brands/01.webp' %}" class="card-img-top" alt="...fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1171,7 +1171,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/02.webp" class="img-fluid" alt="">
+                    <img src="{%static 'assets/images/brands/02.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1180,7 +1180,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/03.webp" class="img-fluid" alt="">
+                    <img src="{%static 'assets/images/brands/03.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1189,7 +1189,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/04.webp" class="img-fluid" alt="">
+                    <img src="{%static 'assets/images/brands/04.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1198,7 +1198,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/05.webp" class="img-fluid" alt="">
+                    <img src="{%static 'assets/images/brands/05.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1207,7 +1207,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/06.webp" class="img-fluid" alt="">
+                    <img src="{% static 'assets/images/brands/06.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1216,7 +1216,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/07.webp" class="img-fluid" alt="">
+                    <img src="{% static 'assets/images/brands/07.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1225,7 +1225,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/08.webp" class="img-fluid" alt="">
+                    <img src="{%  static 'assets/images/brands/08.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1234,7 +1234,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/09.webp" class="img-fluid" alt="">
+                    <img src="{% static 'assets/images/brands/09.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1243,7 +1243,7 @@
               <div class="p-3 border rounded brand-box">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="assets/images/brands/10.webp" class="img-fluid" alt="">
+                    <img src="{% static 'assets/images/brands/10.webp' %}" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -1268,9 +1268,9 @@
             <div class="card">
               <div class="card-body">
                 <div class="overflow-hidden">
-                  <img src="assets/images/categories/01.webp" class="card-img-top rounded-0" alt="...">
+                  <img src="{% static 'assets/images/categories/01.webp' %}" class="card-img-top rounded-0" alt="...">
                 </div>
-                <div class="text-center">
+                <div class="tex t-center">
                   <h5 class="mb-1 cartegory-name mt-3 fw-bold">Kurtas</h5>
                   <h6 class="mb-0 product-number fw-bold">856 Products</h6>
                 </div>
@@ -1281,7 +1281,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="overflow-hidden">
-                  <img src="assets/images/categories/02.webp" class="card-img-top rounded-0" alt="...">
+                  <img src="{% static 'assets/images/categories/02.webp' %}" class="card-img-top rounded-0" alt="...">
                 </div>
                 <div class="text-center">
                   <h5 class="mb-1 cartegory-name mt-3 fw-bold">Heels</h5>
@@ -1294,7 +1294,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="overflow-hidden">
-                  <img src="assets/images/categories/03.webp" class="card-img-top rounded-0" alt="...">
+                  <img src="{% static 'assets/images/categories/03.webp' %}" class="card-img-top rounded-0" alt="...">
                 </div>
                 <div class="text-center">
                   <h5 class="mb-1 cartegory-name mt-3 fw-bold">Lehenga</h5>
@@ -1307,7 +1307,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="overflow-hidden">
-                  <img src="assets/images/categories/04.webp" class="card-img-top rounded-0" alt="...">
+                  <img src="{% static 'assets/images/categories/04.webp' %}" class="card-img-top rounded-0" alt="...">
                 </div>
                 <div class="text-center">
                   <h5 class="mb-1 cartegory-name mt-3 fw-bold">Plazzos</h5>
@@ -1320,7 +1320,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="overflow-hidden">
-                  <img src="assets/images/categories/05.webp" class="card-img-top rounded-0" alt="...">
+                  <img src="{% static 'assets/images/categories/05.webp' %}" class="card-img-top rounded-0" alt="...">
                 </div>
                 <div class="text-center">
                   <h5 class="mb-1 cartegory-name mt-3 fw-bold">Makeup</h5>
@@ -1333,7 +1333,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="overflow-hidden">
-                  <img src="assets/images/categories/06.webp" class="card-img-top rounded-0" alt="...">
+                  <img src="{% static 'assets/images/categories/06.webp' %}" class="card-img-top rounded-0" alt="...">
                 </div>
                 <div class="text-center">
                   <h5 class="mb-1 cartegory-name mt-3 fw-bold">Shoes</h5>
@@ -1376,7 +1376,7 @@
        <div class="row row-cols-1 row-cols-lg-4 g-4">
         <div class="col">
           <div class="footer-widget-6">
-            <img src="assets/images/logo1.png" class="logo-img mb-3" alt="">
+            <img src="{% static 'assets/images/logo1.png' %}" class="logo-img mb-3" alt="">
             <h5 class="mb-3 fw-bold">About Us</h5>
              <p class="mb-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
 
@@ -1440,12 +1440,12 @@
           <div class="app-icon d-flex flex-column flex-sm-row align-items-center justify-content-center gap-2">
             <div>
               <a href="javascript:;">
-                <img src="assets/images/play-store.webp" width="160" alt="">
+                <img src="{% static 'assets/images/play-store.webp' %}" width="160" alt="">
               </a>
             </div>
             <div>
               <a href="javascript:;">
-                <img src="assets/images/apple-store.webp" width="160" alt="">
+                <img src="{% static 'assets/images/apple-store.webp' %}" width="160" alt="">
               </a>
             </div>
           </div>
@@ -1473,7 +1473,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/01.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/01.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1489,7 +1489,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/02.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/02.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1505,7 +1505,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/03.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/03.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1521,7 +1521,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/04.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/04.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1537,7 +1537,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/05.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/05.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1553,7 +1553,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/06.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/06.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1569,7 +1569,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/07.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/07.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1585,7 +1585,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/08.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/08.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1601,7 +1601,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/09.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/09.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1617,7 +1617,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="assets/images/new-arrival/10.webp" width="60" alt="">
+              <img src="{% static 'assets/images/new-arrival/10.webp' %}" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1656,31 +1656,31 @@
 
                 <div class="slider-for">
                   <div>
-                    <img src="assets/images/product-images/01.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/01.jpg' %}" alt="" class="img-fluid">
                   </div>
                   <div>
-                    <img src="assets/images/product-images/02.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/02.jpg' %}" alt="" class="img-fluid">
                   </div>
                   <div>
-                    <img src="assets/images/product-images/03.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/03.jpg' %}" alt="" class="img-fluid">
                   </div>
                   <div>
-                    <img src="assets/images/product-images/04.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/04.jpg'%}" alt="" class="img-fluid">
                   </div>
                 </div>
 
                 <div class="slider-nav mt-3">
                   <div>
-                    <img src="assets/images/product-images/01.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/01.jpg' %}" alt="" class="img-fluid">
                   </div>
                   <div>
-                    <img src="assets/images/product-images/02.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/02.jpg' %}" alt="" class="img-fluid">
                   </div>
                   <div>
-                    <img src="assets/images/product-images/03.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/03.jpg'%}" alt="" class="img-fluid">
                   </div>
                   <div>
-                    <img src="assets/images/product-images/04.jpg" alt="" class="img-fluid">
+                    <img src="{% static 'assets/images/product-images/04.jpg' %}" alt="" class="img-fluid">
                   </div>
                 </div>
 
