created account app

--- a/E_commerce/templates/account_profile.html
+++ b/E_commerce/templates/account_profile.html
@@ -44,7 +44,7 @@
                   <a href="{%url 'account_profile' %}" class="list-group-item active"><i class="bi bi-person me-2"></i>Profile</a>
                   <a href="{%url 'account_edit'%}" class="list-group-item"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
                   <a href="{%url 'wishlist' %}" class="list-group-item"><i class="bi bi-suit-heart me-2"></i>Wishlist</a>
-                  <a href="{%url 'authentication_login' %}" class="list-group-item"><i class="bi bi-power me-2"></i>Logout</a>
+                  <a href="{%url 'logout_user' %}" class="list-group-item"><i class="bi bi-power me-2"></i>Logout</a>
                 </div>
               </div>
             </div>
