--- a/E_commerce/templates/account_dashboard.html
+++ b/E_commerce/templates/account_dashboard.html
@@ -39,7 +39,7 @@
                   <div class="offcanvas-body account-menu">
                     <div class="list-group w-100 rounded-0">
                       <a href="{%url 'account_dashboard' %}" class="list-group-item active"><i class="bi bi-house-door me-2"></i>Dashboard</a>
-                      <a href="#" class="list-group-item"><i class="bi bi-basket3 me-2"></i>Orders</a>
+                      <a href="{%url 'account_orders' %}" class="list-group-item"><i class="bi bi-basket3 me-2"></i>Orders</a>
                       <a href="{%url 'account_profile' %}" class="list-group-item"><i class="bi bi-person me-2"></i>Profile</a>
                       <a href="{%url 'account_edit'%}" class="list-group-item"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
                       <a href="{%url 'wishlist' %}" class="list-group-item"><i class="bi bi-suit-heart me-2"></i>Wishlist</a>
@@ -68,7 +68,7 @@
 
              <div class="row row-cols-1 row-cols-lg-3 g-4 pt-4">
                <div class="col">
-                 <a href="">
+                 <a href="{% url 'account_orders' %}">
                   <div class="card rounded-0">
                     <div class="card-body p-5">
                         <div class="text-center">
